# qt-solutions

./: .gitignore  README.md
qtpropertybrowser/: CMakeLists.txt  common.pri  config.pri  qtpropertybrowser.pro
qtpropertybrowser/buildlib/: buildlib.pro
qtpropertybrowser/examples/: CMakeLists.txt  examples.pro
qtpropertybrowser/examples/canvas_typed/: mainwindow.cpp  qtcanvas.cpp
qtpropertybrowser/examples/canvas_variant/: mainwindow.cpp  qtcanvas.cpp  qtcanvas.h
qtpropertybrowser/examples/decoration/: main.cpp
qtpropertybrowser/examples/demo/: main.cpp
qtpropertybrowser/examples/extension/: main.cpp
qtpropertybrowser/examples/object_controller/: main.cpp  objectcontroller.cpp
qtpropertybrowser/examples/pathedit_examples/: CMakeLists.txt  pathedit_examples.pro
qtpropertybrowser/examples/pathedit_examples/example_extension_variant/: example_extension_variant.pro
qtpropertybrowser/examples/pathedit_examples/example_typed/: example_typed.pro
qtpropertybrowser/examples/simple/: main.cpp
qtpropertybrowser/pathedit-ext/: fileedit.cpp  include.cmake  pathedit-ext.pri
qtpropertybrowser/src/: include.cmake  qteditorfactory.cpp  qteditorfactory.h  qtpropertybrowser.pri  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qtvariantproperty.cpp  qtvariantproperty.h
